org.hibernate.LazyInitializationException 에러 대응
@Transactional 추가